feat(signUp): Доработал регистрацию, добавил ввод пароля и подтверждение email
META: #88815
